fixed few mistakes
- no more CAPITAL WORDS
- removed target="_blank"
- removed unused <span>'s
- scrollbar is visible again
- membra font attribution
- grey background in skills

--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,9 @@
+//------------------------------colors
+$red: #FF0000;
+$blue: #0000FF;
+$black: #333333;
 
+//------------------------------GLOBAL
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,39 +16,35 @@ html {
 }
 
 html, body {
-    height: 100%;
-    margin: 0;
+  height: 100%;
+  margin: 0;
 }
 
-//------------------------------colors
-$red: #FF0000;
-$blue: #0000FF;
-$black: #333333;
-
-//------------------------------GLOBAL
 body {
-  line-height: 1.5;
   font-family: 'audiowide', sans-serif;
   font-size: 1.6rem;
+  line-height: 1.5;
 }
 
-body::-webkit-scrollbar {
-  display: none;
+h2, h4 {
+  font-weight: 600;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 //------------------------------nav
 li a {
-  font-size: 14px;
-  padding-top: 0;
-  text-align: center;
   color: white;
+  font-size: 14px;
   text-transform: uppercase;
   font-weight: 600;
+  text-align: center;
+  padding-top: 0;
 }
 
 .navbar-header {
-  color: $blue;
   font-family: "membraregular";
+  color: $blue;
   background-color: $black;
   background-color: rgba(0,0,0,0.8);
 }
@@ -54,21 +55,21 @@ li a {
 }
 
 .navbar-toggle {
- border-color: white;
- box-shadow: 0 0 20px $blue, 0 0 30px $blue;
+  border-color: white;
+  box-shadow: 0 0 20px $blue, 0 0 30px $blue;
 
  .icon-bar {
    background-color: white;
  }
 
  &:hover {
-   border-color: $red;
-   box-shadow: 0 0 10px $red, 0 0 20px $red;
+    border-color: $red;
+    box-shadow: 0 0 10px $red, 0 0 20px $red;
 
-   .icon-bar {
+    .icon-bar {
      background-color: $red;
-   }
- }
+    }
+  }
 }
 
 #overnavbar a {
@@ -86,8 +87,8 @@ li a {
 }
 
 .navbar-brand {
- font-size: 17px;
- display: none;
+  font-size: 17px;
+  display: none;
 }
 
 //------------------------------header
@@ -113,45 +114,35 @@ h3 {
 }
 
 .name {
-  text-align: center;
   color: white;
   font-family: "membraregular";
+  text-align: center;
   text-shadow: 0 0 10px $blue, 0 0 20px $blue, 0 0 30px $blue, 0 0 40px $blue;
 }
 
 //------------------------------about me
-h2 {
-  font-weight: 600;
-  text-align: center;
-}
-
 .about {
-  font-size: 14px;
   background-image: linear-gradient(rgba(0,0,0,0.10),rgba(0,0,0,0.1)), url("images/moon.jpg");
-  height: 50%;
+  color: white;
+  font-size: 14px;
+  text-align: justify;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  text-align: justify;
-  color: white;
+  height: 50%;
   padding-top: 80px;
   padding-bottom: 120px;
 
   .container {
-    text-shadow: 0 0 2px $black, 0 0 5px $black, 0 0 10px $black, 0 0 20px $black;
-    box-shadow: 0 0 4px 4px rgba(255,255,255,0.3);
     background-color: #000;
     background-color: rgba(0,0,0,0.6);
+    text-shadow: 0 0 2px $black, 0 0 5px $black, 0 0 10px $black, 0 0 20px $black;
+    box-shadow: 0 0 4px 4px rgba(255,255,255,0.3);
   }
 }
 
 //------------------------------skills
-h4 {
-  text-align: center;
-  font-weight: 600;
-}
-
 .skills {
   list-style-type: none;
   margin-top: 100px;
@@ -189,8 +180,8 @@ h4 {
 }
 
 .progress {
-  max-width: 300px;
   width: 90%;
+  max-width: 300px;
   display: block;
   margin: 10px auto;
 }
@@ -205,8 +196,8 @@ h4 {
 
   p {
     text-align: center;
-    padding-top: 15px;
     max-width: 540px;
+    padding-top: 15px;
     margin: auto;
   }
 
@@ -216,6 +207,7 @@ h4 {
 }
 
 article {
+  background-color: #ddd;
   padding-top: 80px;
   padding-bottom: 65px;
 }
@@ -227,15 +219,15 @@ h2 {
 
 .work {
   background-image: url("images/3.jpg");
-  height: 100%;
+  color: white;
+  text-align: center;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100%;
   padding-top: 80px;
   padding-bottom: 70px;
-  color: white;
-  text-align: center;
 
   .container {
     text-shadow: 0 0 2px $black, 0 0 10px $black, 0 0 20px $black, 0 0 30px $black;
@@ -251,6 +243,10 @@ h2 {
 
   p {
     margin: 0;
+  }
+
+  a:hover {
+    color: red;
   }
 }
 
@@ -307,10 +303,10 @@ h2 {
 .contact {
   color: white;
   background-color: #282828;
-  padding-top: 145px;
-  padding-bottom: 80px;
   position: relative;
   text-align: center;
+  padding-top: 145px;
+  padding-bottom: 80px;
 
   .row {
     margin-top: 80px;
@@ -343,24 +339,39 @@ h2 {
 }
 
 .github {
+  background-image: url("images/github.png");
+  background-repeat: no-repeat;
+  background-size: contain;
   height: 28px;
   width: 28px;
   padding-left: 26px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-image: url("images/github.png");
 }
 
 .et {
+  background-image: url("images/et.png");
+  background-repeat: no-repeat;
+  background-size: contain;
   position: absolute;
   right: calc(50% - 160px);
   top: 180px;
   height: 52px;
   width: 80px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-image: url("images/et.png");
   opacity: 0;
+}
+
+.license {
+  color: grey;
+  background-color: #282828;
+  font-size: 10px;
+  text-align: center;
+
+  p {
+    margin-bottom: 0;
+  }
+
+  span {
+    font-family: 'membraregular';
+  }
 }
 
 //-----------------------responsive-------------------------
